Prevent page jump when embedded gbrowse loads by using a fixed height
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathSiteCommon/trunk@64991 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/css/AllSites.css
+++ b/Site/webapp/css/AllSites.css
@@ -986,8 +986,12 @@ a#gbView {
 }
 
 #gnCtx {
-    max-height: 500px;
+    height: 500px;
     overflow: auto;
+}
+
+#gnCtx #imgMapDivId_loading {
+  margin-top: 200px;
 }
 
 
